--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "prestasi-budi-luhur",
-  "description": "Frontend Prestasi Budi Luhur",
+  "name": "name-project",
+  "description": "Frontend",
   "author": {
     "name": "Rizsyad Abiyandra Riadi"
   },
